# hface-bot-sandbox

./: .gitignore  README.md  docker-compose.yml
client/: grpc.py  main.py
context/hub/: Dockerfile
context/hub/src/: main.py
context/serve/: Dockerfile
context/serve/src/: main.py  pyproject.toml  test_index
